[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.16"

jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"

tokio = { version = "1.14.0", features = ["full"] }
prometheus = { version = "0.13.0", default-features = false }

pubsub = { package = "jsonrpc-pubsub", version = "18.0.0" }

http = { package = "jsonrpc-http-server", version = "18.0.0" }
ipc = { package = "jsonrpc-ipc-server", version = "18.0.0" }
ws = { package = "jsonrpc-ws-server", version = "18.0.0" }

tracing = "0.1"
tracing-subscriber = "0.2"

serde = "1.0.130"
serde_json = "1.0.72"

lazy_static = "1.4.0"

rpc-macro = { version = "0.1.0", path = "./macros" }
rpc-server = { version = "0.1.0", path = "./server" }
rpc-api = { version = "0.1.0", path = "./api" }
