[package]
name = "rpc"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hex = "2"

futures = "0.3.16"

jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-server-utils = "18.0.0"
jsonrpc-pubsub = { package = "jsonrpc-pubsub", version = "18.0.0" }
jsonrpc-http = { package = "jsonrpc-http-server", version = "18.0.0" }
jsonrpc-macros = "10.1.0"

tokio = { version = "1.14.0", features = ["full"] }
prometheus = { version = "0.13.0", default-features = false }

log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"

hex = "0.4.3"
serde = "1.0.130"
serde_json = "1.0.72"
serde_derive = "1.0"

lazy_static = "1.4.0"
dyn-clone = "1.0.4"

common = { path = "../common" }
storage = { path = "../storage" }
crypto = { path = "../crypto" }
consensus = { path = "../consensus" }
script = { path = "../script" }
p2p = { path = "../p2p" }
network = { path = "../network" }
serialization = { path = "../serialization" }

heapsize = "0.4.2"

[Tests]
thiserror = { version = "1.0.30"}
async-std = { version = "1.6.5", features = ["unstable"] }
hyper = { version = "0.14.14", default-features = false, features = ["http1", "server", "tcp"] }
futures-util = { version = "0.3.17", default-features = false, features = ["io"] }
futures-timer = { version = "3.0.2"}
