[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-core-client = "18.0.0"

http = { package = "jsonrpc-http-server", version = "18.0.0" }
ipc = { package = "jsonrpc-ipc-server", version = "18.0.0" }
ws = { package = "jsonrpc-ws-server", version = "18.0.0" }
pubsub = { package = "jsonrpc-pubsub", version = "18.0.0" }

tracing = "0.1.29"
tracing-futures = { version = "0.2.4" }

async-trait = "0.1.50"
tokio = { version = "1.13", features = ["time", "rt-multi-thread"] }

serde = "1.0.130"
serde_json = "1.0.72"

codec = { package = "parity-scale-codec", version = "2.0.0" }

futures = "0.3.16"
rand = "0.7.3"
log = "0.4.11"
futures-timer = "3.0.1"
exit-future = "0.2.0"

rpc-server = { version = "0.1.0", path = "../rpc/server" }
rpc-api = { version = "0.1.0", path = "../rpc/api" }
rpc-macro = { version = "0.1.0", path = "../rpc/macros" }