[package]
name = "rpc-macro"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.1.0"
proc-macro2 = "1.0.29"
quote = { version = "1.0.10", features = ["proc-macro"] }
syn = { version = "1.0.81", features = ["proc-macro", "full", "extra-traits", "parsing"] }